<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_container"
        android:padding="3dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/mgrs_txt"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/northing_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            android:padding="3dp"
            android:layout_centerInParent="false"
            tools:layout_editor_absoluteY="57dp"
            tools:layout_editor_absoluteX="200dp"
            android:hint="@string/speech_hint_12345"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/squareID_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            android:padding="3dp"
            android:layout_centerInParent="false"
            tools:layout_editor_absoluteY="57dp"
            tools:layout_editor_absoluteX="72dp"
            android:layout_alignBaseline="@+id/alphaGrid_txt"
            android:layout_alignBottom="@+id/alphaGrid_txt"
            android:hint="@string/speech_hint_AA"
            android:layout_toLeftOf="@+id/easting_txt"/>

        <TextView
            android:id="@+id/alphaGrid_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            android:padding="3dp"
            android:layout_centerInParent="false"
            tools:layout_editor_absoluteY="57dp"
            tools:layout_editor_absoluteX="44dp"
            android:hint="@string/speech_hint_u"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/squareID_txt"/>

        <TextView
            android:id="@+id/easting_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            android:padding="3dp"
            android:layout_centerInParent="false"
            tools:layout_editor_absoluteY="57dp"
            tools:layout_editor_absoluteX="116dp"
            android:hint="@string/speech_hint_12345"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/northing_txt"/>

        <TextView
            android:id="@+id/numericGrid_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            android:padding="3dp"
            android:layout_centerInParent="false"
            tools:layout_editor_absoluteY="57dp"
            tools:layout_editor_absoluteX="3dp"
            android:hint="@string/speech_hint_47"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/alphaGrid_txt"
            android:layout_alignParentLeft="false"/>
    </RelativeLayout>

    <Button
        android:id="@+id/speakMGRS_btn"
        android:text="@string/tap_to_speak_mgrs_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteY="3dp"
        tools:layout_editor_absoluteX="71dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="normal"
        android:padding="3dp"
        android:layout_centerInParent="false"
        android:text="@string/mgrs"
        tools:layout_editor_absoluteY="57dp"
        tools:layout_editor_absoluteX="3dp"
        android:id="@+id/mgrs_txt"
        android:layout_below="@+id/speakMGRS_btn"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/marker_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="normal"
        android:padding="3dp"
        android:layout_centerInParent="false"
        android:text="@string/marker_type"
        tools:layout_editor_absoluteY="158dp"
        tools:layout_editor_absoluteX="120dp"
        android:layout_below="@+id/text_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"/>

    <TextView
        android:id="@+id/marker_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="normal"
        android:padding="3dp"
        android:layout_centerInParent="false"
        tools:layout_editor_absoluteY="158dp"
        tools:layout_editor_absoluteX="120dp"
        android:layout_below="@+id/marker_type"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"
        android:hint="@string/speech_hint_hostile"
        />

    <Button
        android:text="@string/drop_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropMarker_btn"
        tools:layout_editor_absoluteY="202dp"
        tools:layout_editor_absoluteX="142dp"
        android:layout_below="@+id/marker_txt"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"/>

</RelativeLayout>