<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="key_for_category"
        android:title="Test Preference Category (in Plugins they cannot have any members)" />


    <com.atakmap.android.gui.PanEditTextPreference
        pluginIcon="@drawable/abc"
        android:defaultValue="0"
        android:dialogTitle="Enter the time in jiffies"
        android:inputType="number"
        android:key="key_for_helloworld"
        android:numeric="integer"
        android:summary="Not sure what to say about it but if you want to use a summary defined in the strings.xml file you will needs to use the syntax @+string/ with the string identifier.   See the example bellow.   This unique syntax keeps issues from occuring where the string resource is looked up in the core application."
        android:title="Some Textual Preference" />

    <com.atakmap.android.gui.PanPreference
        android:key="test_file_browser"
        android:summary="@string/summary"
        android:title="Test File Browser" />


    <com.atakmap.android.gui.PanPreference
        android:key="test2"
        android:summary="@string/full_example_summary"
        android:title="@string/full_example_title" />


    <Preference
        android:key="nested_pref"
        android:summary="Open a nested preference fragment."
        android:title="Sub Preferences" />

    <com.atakmap.android.gui.EncryptedPanEditTextPreference
        android:title="Certificate Password"
        android:name="Certificate Password"
        android:key="myplugin.certificate_password"
        android:inputType="textPassword"
        android:defaultValue=""
        android:summary="Enter in the certificate password if a client side certificate is in use."/>


</PreferenceScreen>

